it's almost over

--- a/word/templates/essential_english_words.html
+++ b/word/templates/essential_english_words.html
@@ -58,11 +58,12 @@ body{
     <h2 ><p style="color:rgba(251, 251, 0, 0.865); text-align: center;">Only 1 book is available</p></h2>
     
     <a href="/query_essential_1/" class="btn btn1">📚 1 - Book 📚</a>
-    <h1><a href="" class="btn btn1">📚 2 - Book 📚</a></h1>
-    <h1><a href="" class="btn btn1">📚 3 - Book 📚</a></h1>
-    <h1><a href="" class="btn btn1">📚 4 - Book 📚</a></h1>
-    <h1><a href="" class="btn btn1">📚 5 - Book 📚</a></h1>
-    <h1><a href="" class="btn btn1">📚 6 - Book 📚</a></h1>
+    <h2><a href="" class="btn btn1">📚 2 - Book 📚</a></h2>
+    <h2><a href="" class="btn btn1">📚 3 - Book 📚</a></h2>
+    <h2><a href="" class="btn btn1">📚 4 - Book 📚</a></h2>
+    <h2><a href="" class="btn btn1">📚 5 - Book 📚</a></h2>
+    <h2><a href="" class="btn btn1">📚 6 - Book 📚</a></h2>
+    <h2><a href="/home_page/" class="btn btn1">🏠 home 🏠</a></h2>
 
   </div>
   <!-- <h3><a href="/docs/"  style="color:rgba(63, 84, 0, 0.993);"> API swagger docs</a></h3> -->
