--- a/word/templates/home_page.html
+++ b/word/templates/home_page.html
@@ -55,14 +55,14 @@ body{
   <div class="middle">
 
     
-    <h2 ><p style="color:rgba(251, 251, 0, 0.865); text-align: center;"> Bu saytda Test orqali So'z yodlashingiz mumkin yoki yodlagan so'zlaringizni qaytarib turishingiz mumkin.</h2><h1 style="color:rgb(35, 210, 0); text-align: center;"> Xush kelibsiz !!!</p></h1>
+    <h2 ><p style="color:rgba(251, 251, 0, 0.865); text-align: center;">On this site, you can memorize Words by Test or you can recall the memorized words.</h2><h1 style="color:rgb(35, 210, 0); text-align: center;">Welcome✋ !!!</p></h1>
     <br>
     <br>
     <a href="/4000_essential_english_words/" class="btn btn1">📚 4000 Essential English Words 📚</a>
     <!-- <a href="" class="btn btn1">Talabalar 👨‍🎓</a> -->
     <!-- <h1><a href="/adminlar/" class="btn btn1">Adminlar 👨‍💻</a></h1> -->
     <!-- <h1><a href="/mualliflar/" class="btn btn1">Mualiflar ✍️</a></h1> -->
-    <h1><a href="" class="btn btn1"> ⏰ No other books yet 🕐</a></h1>
+    <a href="/settings/" class="btn btn1">⚙️ Settings ⚙️</a>
   </div>
   <!-- <h3><a href="/docs/"  style="color:rgba(63, 84, 0, 0.993);"> API swagger docs</a></h3> -->
 
