--- a/word/templates/sigin/index.html
+++ b/word/templates/sigin/index.html
@@ -53,7 +53,7 @@
                   {% if error %}
                 <label> {{error}}<span class="req">*</span> </label>
                   {% else %}
-                  <label> Your Username<span class="req">*</span> </label>
+                  <label> Username<span class="req">*</span> </label>
                   {% endif %}
                 <input type="text" class="form-control" name="username" required data-validation-required-message="Please enter username." autocomplete="off">
                 <p class="help-block text-danger"></p>
