--- a/word/templates/test_1_essential.html
+++ b/word/templates/test_1_essential.html
@@ -2,478 +2,192 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>1-essential</title>
-	<style>
+    <title>Essential English Words</title>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
-		/* Please ❤ this if you like it! */
-		
-		
-		@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
-		
-		
-		:root {
-			--white: #ffffff;
-			--light: #f0eff3;
-			--black: #000000;
-			--dark-blue: #1f2029;
-			--dark-light: #353746;
-			--red: #da2c4d;
-			--yellow: #f8ab37;
-			--grey: #ecedf3;
-		}
-		
-		/* #Primary
-		================================================== */
-		
-		body{
-			width: 100%;
-			background: var(--dark-blue);
-			overflow-x: hidden;
-			font-family: 'Poppins', sans-serif;
-			font-size: 17px;
-			line-height: 30px;
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		p{
-			font-family: 'Poppins', sans-serif;
-			font-size: 17px;
-			line-height: 30px;
-			color: var(--white);
-			letter-spacing: 1px;
-			font-weight: 500;
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		::selection {
-			color: var(--white);
-			background-color: var(--black);
-		}
-		::-moz-selection {
-			color: var(--white);
-			background-color: var(--black);
-		}
-		mark{
-			color: var(--white);
-			background-color: var(--black);
-		}
-		.section {
-			position: relative;
-			width: 100%;
-			display: block;
-			text-align: center;
-			margin: 0 auto;
-		}
-		.over-hide {
-			overflow: hidden;
-		}
-		.z-bigger {
-			z-index: 100 !important;
-		}
-		
-		
-		.background-color{
-			position: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: var(--dark-blue);
-			z-index: 1;
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox:checked ~ .background-color{
-			background-color: var(--white);
-		}
-		
-		
-		[type="checkbox"]:checked,
-		[type="checkbox"]:not(:checked),
-		[type="radio"]:checked,
-		[type="radio"]:not(:checked){
-			position: absolute;
-			left: -9999px;
-			width: 0;
-			height: 0;
-			visibility: hidden;
-		}
-		.checkbox:checked + label,
-		.checkbox:not(:checked) + label{
-			position: relative;
-			width: 70px;
-			display: inline-block;
-			padding: 0;
-			margin: 0 auto;
-			text-align: center;
-			margin: 17px 0;
-			margin-top: 100px;
-			height: 6px;
-			border-radius: 4px;
-			background-image: linear-gradient(298deg, var(--red), var(--yellow));
-			z-index: 100 !important;
-		}
-		.checkbox:checked + label:before,
-		.checkbox:not(:checked) + label:before {
-			position: absolute;
-			font-family: 'unicons';
-			cursor: pointer;
-			top: -17px;
-			z-index: 2;
-			font-size: 20px;
-			line-height: 40px;
-			text-align: center;
-			width: 40px;
-			height: 40px;
-			border-radius: 50%;
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox:not(:checked) + label:before {
-			content: '\eac1';
-			left: 0;
-			color: var(--grey);
-			background-color: var(--dark-light);
-			box-shadow: 0 4px 4px rgba(0,0,0,0.15), 0 0 0 1px rgba(26,53,71,0.07);
-		}
-		.checkbox:checked + label:before {
-			content: '\eb8f';
-			left: 30px;
-			color: var(--yellow);
-			background-color: var(--dark-blue);
-			box-shadow: 0 4px 4px rgba(26,53,71,0.25), 0 0 0 1px rgba(26,53,71,0.07);
-		}
-		
-		.checkbox:checked ~ .section .container .row .col-12 p{
-			color: var(--dark-blue);
-		}
-		
-		
-		.checkbox-tools:checked + label,
-		.checkbox-tools:not(:checked) + label{
-			position: relative;
-			display: inline-block;
-			padding: 20px;
-			width: 110px;
-			font-size: 14px;
-			line-height: 20px;
-			letter-spacing: 1px;
-			margin: 0 auto;
-			margin-left: 5px;
-			margin-right: 5px;
-			margin-bottom: 10px;
-			text-align: center;
-			border-radius: 4px;
-			overflow: hidden;
-			cursor: pointer;
-			text-transform: uppercase;
-			color: var(--white);
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox-tools:not(:checked) + label{
-			background-color: var(--dark-light);
-			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-		}
-		.checkbox-tools:checked + label{
-			background-color: transparent;
-			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-		.checkbox-tools:not(:checked) + label:hover{
-			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-		.checkbox-tools:checked + label::before,
-		.checkbox-tools:not(:checked) + label::before{
-			position: absolute;
-			content: '';
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			border-radius: 4px;
-			background-image: linear-gradient(298deg, var(--red), var(--yellow));
-			z-index: -1;
-		}
-		.checkbox-tools:checked + label .uil,
-		.checkbox-tools:not(:checked) + label .uil{
-			font-size: 24px;
-			line-height: 24px;
-			display: block;
-			padding-bottom: 10px;
-		}
-		
-		.checkbox:checked ~ .section .container .row .col-12 .checkbox-tools:not(:checked) + label{
-			background-color: var(--light);
-			color: var(--dark-blue);
-			box-shadow: 0 1x 4px 0 rgba(0, 0, 0, 0.05);
-		}
-		
-		.checkbox-budget:checked + label,
-		.checkbox-budget:not(:checked) + label{
-			position: relative;
-			display: inline-block;
-			padding: 0;
-			padding-top: 20px;
-			padding-bottom: 20px;
-			width: 260px;
-			font-size: 52px;
-			line-height: 52px;
-			font-weight: 700;
-			letter-spacing: 1px;
-			margin: 0 auto;
-			margin-left: 5px;
-			margin-right: 5px;
-			margin-bottom: 10px;
-			text-align: center;
-			border-radius: 4px;
-			overflow: hidden;
-			cursor: pointer;
-			text-transform: uppercase;
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-			-webkit-text-stroke: 1px var(--white);
-			text-stroke: 1px var(--white);
-			-webkit-text-fill-color: transparent;
-			text-fill-color: transparent;
-			color: transparent;
-		}
-		.checkbox-budget:not(:checked) + label{
-			background-color: var(--dark-light);
-			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-		}
-		.checkbox-budget:checked + label{
-			background-color: transparent;
-			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-		.checkbox-budget:not(:checked) + label:hover{
-			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-		.checkbox-budget:checked + label::before,
-		.checkbox-budget:not(:checked) + label::before{
-			position: absolute;
-			content: '';
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			border-radius: 4px;
-			background-image: linear-gradient(138deg, var(--red), var(--yellow));
-			z-index: -1;
-		}
-		.checkbox-budget:checked + label span,
-		.checkbox-budget:not(:checked) + label span{
-			position: relative;
-			display: block;
-		}
-		.checkbox-budget:checked + label span::before,
-		.checkbox-budget:not(:checked) + label span::before{
-			position: absolute;
-			content: attr(data-hover);
-			top: 0;
-			left: 0;
-			width: 100%;
-			overflow: hidden;
-			-webkit-text-stroke: transparent;
-			text-stroke: transparent;
-			-webkit-text-fill-color: var(--white);
-			text-fill-color: var(--white);
-			color: var(--white);
-			-webkit-transition: max-height 0.3s;
-			-moz-transition: max-height 0.3s;
-			transition: max-height 0.3s;
-		}
-		.checkbox-budget:not(:checked) + label span::before{
-			max-height: 0;
-		}
-		.checkbox-budget:checked + label span::before{
-			max-height: 100%;
-		}
-		
-		.checkbox:checked ~ .section .container .row .col-xl-10 .checkbox-budget:not(:checked) + label{
-			background-color: var(--light);
-			-webkit-text-stroke: 1px var(--dark-blue);
-			text-stroke: 1px var(--dark-blue);
-			box-shadow: 0 1x 4px 0 rgba(0, 0, 0, 0.05);
-		}
-		
-		.checkbox-booking:checked + label,
-		.checkbox-booking:not(:checked) + label{
-			position: relative;
-			display: -webkit-inline-flex;
-			display: -ms-inline-flexbox;
-			display: inline-flex;
-			-webkit-align-items: center;
-			-moz-align-items: center;
-			-ms-align-items: center;
-			align-items: center;
-			-webkit-justify-content: center;
-			-moz-justify-content: center;
-			-ms-justify-content: center;
-			justify-content: center;
-			-ms-flex-pack: center;
-			text-align: center;
-			padding: 0;
-			padding: 6px 25px;
-			font-size: 14px;
-			line-height: 30px;
-			letter-spacing: 1px;
-			margin: 0 auto;
-			margin-left: 6px;
-			margin-right: 6px;
-			margin-bottom: 16px;
-			text-align: center;
-			border-radius: 4px;
-			cursor: pointer;
-			color: var(--white);
-			text-transform: uppercase;
-			background-color: var(--dark-light);
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox-booking:not(:checked) + label::before{
-			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-		}
-		.checkbox-booking:checked + label::before{
-			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-		.checkbox-booking:not(:checked) + label:hover::before{
-			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-		.checkbox-booking:checked + label::before,
-		.checkbox-booking:not(:checked) + label::before{
-			position: absolute;
-			content: '';
-			top: -2px;
-			left: -2px;
-			width: calc(100% + 4px);
-			height: calc(100% + 4px);
-			border-radius: 4px;
-			z-index: -2;
-			background-image: linear-gradient(138deg, var(--red), var(--yellow));
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox-booking:not(:checked) + label::before{
-			top: -1px;
-			left: -1px;
-			width: calc(100% + 2px);
-			height: calc(100% + 2px);
-		}
-		.checkbox-booking:checked + label::after,
-		.checkbox-booking:not(:checked) + label::after{
-			position: absolute;
-			content: '';
-			top: -2px;
-			left: -2px;
-			width: calc(100% + 4px);
-			height: calc(100% + 4px);
-			border-radius: 4px;
-			z-index: -2;
-			background-color: var(--dark-light);
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox-booking:checked + label::after{
-			opacity: 0;
-		}
-		.checkbox-booking:checked + label .uil,
-		.checkbox-booking:not(:checked) + label .uil{
-			font-size: 20px;
-		}
-		.checkbox-booking:checked + label .text,
-		.checkbox-booking:not(:checked) + label .text{
-			position: relative;
-			display: inline-block;
-			-webkit-transition: opacity 300ms linear;
-			transition: opacity 300ms linear;
-		}
-		.checkbox-booking:checked + label .text{
-			opacity: 0.6;
-		}
-		.checkbox-booking:checked + label .text::after,
-		.checkbox-booking:not(:checked) + label .text::after{
-			position: absolute;
-			content: '';
-			width: 0;
-			left: 0;
-			top: 50%;
-			margin-top: -1px;
-			height: 2px;
-			background-image: linear-gradient(138deg, var(--red), var(--yellow));
-			z-index: 1;
-			-webkit-transition: all 300ms linear;
-			transition: all 300ms linear; 
-		}
-		.checkbox-booking:not(:checked) + label .text::after{
-			width: 0;
-		}
-		.checkbox-booking:checked + label .text::after{
-			width: 100%;
-		}
-		
-		.checkbox:checked ~ .section .container .row .col-12 .checkbox-booking:not(:checked) + label,
-		.checkbox:checked ~ .section .container .row .col-12 .checkbox-booking:checked + label{
-			background-color: var(--light);
-			color: var(--dark-blue);
-		}
-		.checkbox:checked ~ .section .container .row .col-12 .checkbox-booking:checked + label::after,
-		.checkbox:checked ~ .section .container .row .col-12 .checkbox-booking:not(:checked) + label::after{
-			background-color: var(--light);
-		}
-		
-		
-		
-		
-		.link-to-page {
-			position: fixed;
-			top: 30px;
-			right: 30px;
-			z-index: 20000;
-			cursor: pointer;
-			width: 50px;
-		}
-		.link-to-page img{
-			width: 100%;
-			height: auto;
-			display: block;
-		}</style>
+        :root {
+          --primary-color: rgb(177, 39, 108);
+        }
+
+        * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+        }
+
+        body {
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          background-color: #181818;
+          color: #fff;
+          font-family: Montserrat, sans-serif;
+          position: relative; /* add this */
+        }
+
+        .form-group {
+          margin: 1rem 0;
+        }
+
+        input[type="radio"] {
+          display: none;
+        }
+
+        label {
+          cursor: pointer;
+          position: relative;
+          font-size: 4rem;
+        }
+
+        label::before {
+          content: "";
+          position: absolute;
+          width: 50px;
+          height: 50px;
+          background-color: transparent;
+          border: 2px solid #fff;
+          border-radius: 50%;
+          top: 50%;
+          left: -5rem;
+          transform: translateY(-50%);
+          transition: border-color 400ms ease;
+        }
+
+        label::after {
+          content: "";
+          position: absolute;
+          width: 50px;
+          height: 50px;
+          background-color: var(--primary-color);
+          border: 2px solid var(--primary-color);
+          border-radius: 50%;
+          top: 50%;
+          left: -5rem;
+          transform: translateY(-50%) scale(0);
+          transition: transform 400ms ease;
+        }
+
+        input[type="radio"]:checked + label::before {
+          border-color: var(--primary-color);
+        }
+
+        input[type="radio"]:checked + label::after {
+          transform: translateY(-50%) scale(0.55);
+        }
+
+        /* add these two styles */
+
+
+        .aa2 {
+          position: absolute;
+          top: 0;
+          right: 1;
+        }
+
+        .aa1 {
+          position: initial;
+          top: 0;
+          left: 0;
+        }
+
+        .btn {
+  box-sizing: border-box;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 2px solid #e74c3c;
+  border-radius: 0.6em;
+  color: #e74c3c;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+.btn:hover, .btn:focus {
+  color: #fff;
+  outline: 0;
+}
+
+.first {
+  -webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+.first:hover {
+  box-shadow: 0 0 40px 40px #e74c3c inset;
+}
+
+.second {
+  border-radius: 3em;
+  border-color: #1abc9c;
+  color: #fff;
+  background-image: -webkit-linear-gradient(left, rgba(26, 188, 156, 0.6), rgba(26, 188, 156, 0.6) 5%, #1abc9c 5%, #1abc9c 10%, rgba(26, 188, 156, 0.6) 10%, rgba(26, 188, 156, 0.6) 15%, #1abc9c 15%, #1abc9c 20%, rgba(26, 188, 156, 0.6) 20%, rgba(26, 188, 156, 0.6) 25%, #1abc9c 25%, #1abc9c 30%, rgba(26, 188, 156, 0.6) 30%, rgba(26, 188, 156, 0.6) 35%, #1abc9c 35%, #1abc9c 40%, rgba(26, 188, 156, 0.6) 40%, rgba(26, 188, 156, 0.6) 45%, #1abc9c 45%, #1abc9c 50%, rgba(26, 188, 156, 0.6) 50%, rgba(26, 188, 156, 0.6) 55%, #1abc9c 55%, #1abc9c 60%, rgba(26, 188, 156, 0.6) 60%, rgba(26, 188, 156, 0.6) 65%, #1abc9c 65%, #1abc9c 70%, rgba(26, 188, 156, 0.6) 70%, rgba(26, 188, 156, 0.6) 75%, #1abc9c 75%, #1abc9c 80%, rgba(26, 188, 156, 0.6) 80%, rgba(26, 188, 156, 0.6) 85%, #1abc9c 85%, #1abc9c 90%, rgba(26, 188, 156, 0.6) 90%, rgba(26, 188, 156, 0.6) 95%, #1abc9c 95%, #1abc9c 100%);
+  background-image: linear-gradient(to right, rgba(26, 188, 156, 0.6), rgba(26, 188, 156, 0.6) 5%, #1abc9c 5%, #1abc9c 10%, rgba(26, 188, 156, 0.6) 10%, rgba(26, 188, 156, 0.6) 15%, #1abc9c 15%, #1abc9c 20%, rgba(26, 188, 156, 0.6) 20%, rgba(26, 188, 156, 0.6) 25%, #1abc9c 25%, #1abc9c 30%, rgba(26, 188, 156, 0.6) 30%, rgba(26, 188, 156, 0.6) 35%, #1abc9c 35%, #1abc9c 40%, rgba(26, 188, 156, 0.6) 40%, rgba(26, 188, 156, 0.6) 45%, #1abc9c 45%, #1abc9c 50%, rgba(26, 188, 156, 0.6) 50%, rgba(26, 188, 156, 0.6) 55%, #1abc9c 55%, #1abc9c 60%, rgba(26, 188, 156, 0.6) 60%, rgba(26, 188, 156, 0.6) 65%, #1abc9c 65%, #1abc9c 70%, rgba(26, 188, 156, 0.6) 70%, rgba(26, 188, 156, 0.6) 75%, #1abc9c 75%, #1abc9c 80%, rgba(26, 188, 156, 0.6) 80%, rgba(26, 188, 156, 0.6) 85%, #1abc9c 85%, #1abc9c 90%, rgba(26, 188, 156, 0.6) 90%, rgba(26, 188, 156, 0.6) 95%, #1abc9c 95%, #1abc9c 100%);
+  background-position: 0 0;
+  background-size: 100%;
+  -webkit-transition: background 300ms ease-in-out;
+  transition: background 300ms ease-in-out;
+}
+.second:hover {
+  background-position: 100px;
+}
+
+.third {
+  border-color: #3498db;
+  color: #fff;
+  box-shadow: 0 0 40px 40px #3498db inset, 0 0 0 0 #3498db;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+.third:hover {
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+}
+
+    </style>
 </head>
 <body>
-	<div class="section over-hide z-bigger">
-		<input class="checkbox" type="checkbox" name="general" id="general">
-		<label class="for-checkbox" for="general"></label>
-		<div class="background-color"></div>
-		<div class="section over-hide z-bigger">
-			<div class="container pb-5">
-				<div class="row justify-content-center pb-5">
-				
-					<div class="col-12 pt-1">
-						<p class="mb-4 pb-2">Client Budget</p>
-					</div>
+    <div class="aa2"><h3 style="color:#fff;">{{amount_number}} / {{amount}}</h3></div>
+    <div class="aa1"><h3 style="color:#fff;">acceptance: {{acceptance}}</h3></div>
 
-					                        <div class="col-xl-10 pb-5">
-                            <input class="checkbox-budget" type="radio" name="language" id="language-eng" value="eng-uzb" checked>
-                            <label class="for-checkbox-budget" for="language-eng">
-                                <span data-hover="eng-uzb">eng-uzb</span>
-                            </label>
-                            <input class="checkbox-budget" type="radio" name="language" id="language-uzb" value="uzb-eng">
-                            <label class="for-checkbox-budget" for="language-uzb">
-                                <span data-hover="uzb-eng">uzb-eng</span>
-                            </label>		
-                        </div>
-					
-					
-					</div>
-					
-					</div>
-				</div>
-			</div>	
-		</div>
-	</div>
-		
-	<!-- Link to page
-	================================================== -->
 
-	<a href="https://front.codes" class="link-to-page" target="_blank"><img src="https://assets.codepen.io/1462889/fcy.png" alt=""></a>
+    <form action="/test_1_essential/" method="post">{% csrf_token %}
+    <h1 style="color: blue; font-size: 100px;">{{word}}</h1>
+    <div class="radio-buttons">
+        <div class="form-group">
+          <input type="radio" id="male" name="soz" value="{{soz_1}}"/>
+          <label for="male">{{soz_1}}</label>
+        </div>
+      
+        <div class="form-group">
+          <input type="radio" id="female" name="soz"  value="{{soz_2}}"/>
+          <label for="female">{{soz_2}}</label>
+        </div>
+      
+        <div class="form-group">
+          <input type="radio" id="other" name="soz"  value="{{soz_3}}"/>
+          <label for="other">{{soz_3}}</label>
+        </div>
+      </div>
+      <button class="btn third" type="submit">Submit</button>
+    </form>
+
+    
 </body>
 </html>
